<resources>
    <!-- Cadenas de Texto Generales -->
    <string name="nombreApp">EatIt</string>
    <string name="nombreSplash">EATIT</string>
    <string name="cargando">Cargando...</string>
    <string name="logo">Logo App</string>

    <!-- Cadenas de Texto SplashScreen -->
    <string name="circulo_exterior">Círculo exterior</string>
    <string name="circulo_medio">Círculo medio</string>
    <string name="circulo_interior">Círculo interior</string>

    <!-- Cadenas de Texto del Login -->
    <string name="login_texto">INICIAR SESIÓN</string>
    <string name="login_correo">CORREO ELECTRÓNICO</string>
    <string name="login_correo_hint">Escribe tu correo electrónico</string>
    <string name="login_contraseña">CONTRASEÑA</string>
    <string name="login_contraseña_hint">Escribe tu contraseña</string>
    <string name="contraseña_olvidada">He olvidado la contraseña</string>
    <string name="sesion_iniciada">Mantener la sesión iniciada</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>

    <!-- Cadenas de Texto Recuperar Contraseña -->
    <string name="aceptar">Enviar</string>
    <string name="cancelar">Cancelar</string>

    <!-- Cadenas de Texto del Registro -->
    <string name="registro_texto">CREAR CUENTA</string>
    <string name="nombre">NOMBRE</string>
    <string name="nombre_hint">Escribe tu nombre</string>
    <string name="apellido">APELLIDO</string>
    <string name="apellido_hint">Escribe tu apellido</string>
    <string name="boton_registro">Crear Cuenta</string>
    <string name="registro_login">¿Ya tienes cuenta? Iniciar Sesión</string>

    <!-- Cadenas de Texto del Menú Lateral  -->
    <string name="bienvenida">¡Hola, !</string>
    <string name="inicio">INICIO</string>
    <string name="ingredientes">INGREDIENTES</string>
    <string name="addIngredientes">AÑADIR INGREDIENTES</string>
    <string name="verIngredientes">MIS INGREDIENTES</string>
    <string name="recetas">RECETAS</string>
    <string name="recomendador">BUSCADOR</string>
    <string name="verRecetas">MIS RECETAS</string>
    <string name="tools">AJUSTES</string>
    <string name="sesion">CERRAR SESIÓN</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>

    <!-- Cadenas de Texto Fragment de Inicio -->
        <string name="actividad_principal">RECETAS POPULARES</string>
        <!-- Cadenas de Texto Ver Recetas de la comunidad -->
        <string name="nombre_receta">NOMBRE RECETA</string>
        <string name="ingredientes_receta">INGREDIENTES</string>
        <string name="ingredientes_receta_detalles">Ingrediente</string>
        <string name="personas_raciones">RACIONES:</string>
        <string name="personas_numero">10 personas</string>
        <string name="dificultad">DIFICULTAD:</string>
        <string name="nivel_receta">Media</string>
        <string name="duracion_estimada">TIEMPO ESTIMADO:</string>
        <string name="tiempo">2:30 h</string>
        <string name="elaboracion">ELABORACIÓN</string>
        <string name="pasos_elab">Receta</string>
        <string name="guardar_favoritos">GUARDAR EN FAVORITOS</string>

    <!-- Cadenas de Texto para el activity de ver Recetas -->
    <string name="activity_nombre_receta">Nueva receta</string>
    <string name="activar_lector">ACTIVAR LECTOR</string>
    <string name="desactivar_lector">DESACTIVAR LECTOR</string>
    <string name="activity_dificultad">Dificultad</string>
    <string name="activity_tiempo">Tiempo</string>
    <string name="activity_comensales">Comensales</string>
    <string name="activity_ingredientes">INGREDIENTES</string>
    <string name="siguiente_paso">Comenzar receta</string>
    <string name="paso_1">PASO 1</string>
    <string name="siguiente">Siguiente Paso</string>
    <string name="anterior">Anterior Paso</string>
    <string name="fin">Terminar Receta</string>

    <!-- Cadenas de Texto para el activity de crear receta -->
    <string name="activity_paso1">RELLENA LOS CAMPOS</string>
    <string name="btn_add_receta">SIGUIENTE</string>
    <string name="texto_tiempo">TIEMPO DE ELABORACIÓN *</string>
    <string name="texto_nombre">NOMBRE DE LA RECETA *</string>
    <string name="texto_hint">Tiempo de la elaboración en minutos</string>
    <string name="texto_nombre_hint">Nombre de la receta</string>
    <string name="texto_comensales">COMENSALES *</string>
    <string name="texto_comensales_hint">Número de comensales</string>
    <string name="texto_dificultad">DIFICULTAD DE LA RECETA</string>
    <string name="texto_dificultad_hint">Dificultad de la receta</string>
    <string name="nuevo_paso">Nuevo Paso</string>
    <string name="guardar_receta">Guardar receta</string>
    <string name="crear_paso">NUEVO PASO</string>
    <string name="desc_paso">ELABORACIÓN:</string>
    <string name="desc_paso_hint">Describe el nuevo paso de la receta</string>

    <!-- Cadenas de Texto Fragment de Añadir Ingredientes y Fragment de Mis Ingredientes-->
    <string name="mis_ingredientes">MIS INGREDIENTES</string>
        <!-- Cadenas de texto para la pantalla de ver Mis Ingredientes -->
        <string name="ver_ingrediente">INGREDIENTE</string>
        <string name="cantidad">CANTIDAD:</string>
        <string name="gramos">120 gr.</string>
        <string name="fecha">FECHA DE CADUCIDAD</string>
        <string name="fecha_ejemplo">12/03/2023</string>
        <string name="kcal">KCAL:</string>
        <string name="kcal_ejemplo">120 kcal.</string>
        <string name="tipo">TIPO:</string>
            <string name="tipo_context">Seleccionar tipo de ingrediente</string>
        <string name="tipo_ejemplo">Carne</string>
        <string name="modificar">EDITAR</string>
        <string name="habilitar">HABILITAR INGREDIENTE</string>
        <string name="eliminar">ELIMINAR</string>

    <string name="info_ings">INFORMACIÓN</string>
    <string name="desc">- Este símbolo indica que un ingrediente está caducado.</string>
    <string name="desc2">- Este símbolo indica que el ingrediente ha sido usado en una receta.</string>
    <string name="desc3">- Los ingredientes ya usados no aparecerán a la hora de crear una receta, y los caducados, aparecerán en rojo.</string>
    <string name="desc4">- Para que dichos ingredientes aparezcan disponibles, se deberá:</string>
    <string name="desc5">- Actualizar la fecha de caducidad.</string>
    <string name="desc6">- Volver a habilitar el ingrediente.</string>
    <string name="info_receta">Mantén pulsado sobre cada receta para editarla o eliminarla</string>


    <string name="op_recetas">OPCIONES</string>
    <string name="op_text_recetas">¿Qué operación deseas realizar?</string>
    <string name="delete_receta">ELIMINAR</string>
    <string name="update_receta">EDITAR</string>

    <string name="add_ingrediente">AÑADIR INGREDIENTE</string>
    <string name="scanner">Imagen Scanner</string>
    <string name="btn_float">Botón Flotante</string>
        <!-- Cadenas de Texto para el CardView de añadir ingredientes -->
        <string name="card_add_ingredientes">NUEVO INGREDIENTE</string>
        <string name="card_nombre_ingrediente">NOMBRE: *</string>
        <string name="nombre_ingrediente_hint">Nombre del ingrediente</string>
        <string name="card_caducidad">FECHA DE CADUCIDAD: *</string>
        <string name="caducidad_ingrediente_hint">Escribe la fecha de caducidad</string>
        <string name="tipo_ingrediente">TIPO</string>
        <string name="tipo_ingrediente_hint">Elige el tipo del ingrediente</string>
        <string name="guardar_ingrediente">GUARDAR</string>
        <string name="actualizar_ingrediente">ACTUALIZAR</string>
        <string name="description_cerrar">Botón de cerrar</string>
        <string name="warn_caducado">Símbolo de alerta</string>
        <string name="warn_caducado_text">¡Ingrediente Caducado!</string>
        <string name="warn_deshabilitado_text">¡Ingrediente Deshabilitado!</string>

    <!-- Cadenas de Texto Fragment de Bucador -->
    <string name="busqueda_hint">Escribe la receta que quieres buscar</string>
    <string name="busqueda_titulo">¿QUÉ COCINAR HOY?</string>

    <!-- Cadenas de Texto Fragmment Mis Recetas -->
    <string name="mis_recetas">MIS RECETAS</string>
        <!-- Cadenas de Texto para el CardView de añadir recetas -->
        <string name="card_add_recetas">NUEVA RECETA</string>
        <string name="nombre_receta_hint">Nombre de la receta</string>
        <string name="pasos">DESCRIPCIÓN *</string>
        <string name="detalle_receta_hint">Pasos a seguir de la receta</string>
        <string name="personas">RECETA PARA:</string>
        <string name="personas_hint">Nº de personas</string>
        <string name="nivel">DIFICULTAD</string>
        <string name="dificultad_hint">Establecer dificultad</string>
        <string name="duración">TIEMPO DE COCINADO</string>
        <string name="duracion_hint">Establecer tiempo de cocinado</string>

        <!-- Cadenas de texto para el cardview de ver mis recetas -->
        <string name="btn_eliminar">ELIMINAR RECETA</string>
        <string name="btn_editar">EDITAR RECETA</string>

    <!-- Cadenas de Texto Fragment Ajustes -->
    <string name="ajustes_activity">AJUSTES</string>
    <string name="nombre_usuario">CAMBIAR NOMBRE DE USUARIO</string>
    <string name="ajustes_nombre_usuario_hint">Nuevo nombre de usuario</string>
    <string name="ajustes_contraseña_vieja">CAMBIAR CONTRASEÑA</string>
    <string name="ajustes_contraseña_vieja_hint">Contraseña Actual</string>
    <string name="ajustes_contraseña_nueva_hint">Nueva Contraseña</string>
    <string name="ajustes_contraseña_nueva_hint_bis">Repetir Nueva Contraseña</string>
    <string name="guardar_ajustes">GUARDAR</string>

    <!-- Cadenas de Texto Confirmar Cambios Ajustes -->
    <string name="confirmar_cambios">¿Desea guardar los cambios?</string>

    <!-- Cadenas de Texto de list_receta -->
    <string name="receta">Receta</string>
    <string name="ing_receta1">Ingredientes disponibles: x</string>
    <string name="ing_receta2">Ingredientes necesarios: y</string>
    <string name="btn">Ver detalles</string>
    <string name="ing_alert">¡Revisar Ingredientes!</string>
    <string name="ing_alert_ok">¡Listo para Cocinar!</string>

    <!-- Cadenas de Texto de list_ingredientes -->
    <string name="ingrediente">Ingredientes</string>

    <!-- String para el content descriprion del fondo de la SplashScreen -->
    <string name="fondo_splashscreen">Fondo SplashScreen</string>

    <string name="tipo_ingrediente_prompt">Selecciona el tipo de ingrediente</string>
</resources>