<?xml version="1.0" encoding="utf-8"?>
<!-- Menú de la aplicación -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Grupo con el Item de Inicio -->
    <group android:checkableBehavior="single">
        <item android:id="@+id/inicio"
            android:icon="@drawable/inicio"
            android:title="@string/inicio" />
    </group>

    <!-- Grupo conlos Items relacionados con los Ingredientes -->
    <group android:checkableBehavior="single">
        <item android:title="@string/ingredientes">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_ingredientes2"
                        android:icon="@drawable/barcode"
                        android:title="@string/addIngredientes"/>
                    <item
                        android:id="@+id/nav_ingredientes3"
                        android:icon="@drawable/ingredientes"
                        android:title="@string/verIngredientes"/>
                </group>
            </menu>
        </item>

        <!-- Grupo con los Items relacionados con las Recetas -->
        <item android:title="@string/recetas">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_recetas2"
                        android:icon="@drawable/buscar"
                        android:title="@string/recomendador"/>
                    <item
                        android:id="@+id/nav_recetas3"
                        android:icon="@drawable/add_receta"
                        android:title="@string/verRecetas"/>
                </group>
            </menu>
        </item>
    </group>

    <!-- Grupo con el Item de Ajustes -->
    <group
        android:id="@+id/grupoGestionUsuario"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ajustes"
            android:title="@string/tools" />
    </group>

    <!-- Grupo con el Item de Cerrar Sesión -->
    <group
        android:id="@+id/grupoGestionUsuario2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sesion"
            android:icon="@drawable/sesion"
            android:title="@string/sesion" />
    </group>
</menu>