<?xml version="1.0" encoding="utf-8"?>
<!-- Layout principal del frgament de añadir ingredientes -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_ingredientes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negroClaro"
    android:orientation="vertical">

    <!-- Logo de la aplicación -->
    <ImageView
        android:id="@+id/add_ingredientes_logo"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="75dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <!-- Título del fragment (Añadir ingrediente) -->
    <TextView
        android:id="@+id/add_ingredientes_titulo"
        android:layout_width="296dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_medio"
        android:gravity="center"
        android:text="@string/add_ingrediente"
        android:textColor="@color/doradoClaro"
        android:textSize="25sp" />

    <!-- Layout en el que meteremos el scanner de Código de Barras y el Floating Button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_scanner_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Imagen que indica el escáner del Código de Barras -->
        <ImageView
            android:id="@+id/imagen_codigo_barras"
            android:layout_width="350dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/scanner"
            android:src="@drawable/scanner_bis"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- FloatingButton para añadir ingrdientes sin escanear su Código de Barras -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_flotante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/btn_float"
            app:tint="@null"
            app:elevation="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>