<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/negroClaro">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/crear_receta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:fontFamily="@font/montserrat_medio"
        android:gravity="center"
        android:text="@string/activity_paso1"
        android:textColor="@color/doradoClaro"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/siguiente_paso"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/arrow_right"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_receta">

        <TextView
            android:id="@+id/texto_tiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/texto_tiempo"
            android:textColor="@color/doradoClaro"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextInput_tiempo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/montserrat_light"
            android:textColorHint="@color/doradoClaro"
            android:textSize="16sp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/doradoClaro"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto_tiempo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_tiempo"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/texto_hint"
                android:textColor="@color/doradoClaro"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_comensales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_tiempo">

        <TextView
            android:id="@+id/texto_comensales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/texto_comensales"
            android:textColor="@color/doradoClaro"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextInput_comensales"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/montserrat_light"
            android:textColorHint="@color/doradoClaro"
            android:textSize="16sp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/doradoClaro"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto_comensales">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_comensales"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/texto_comensales_hint"
                android:textColor="@color/doradoClaro"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_comensales">

        <TextView
            android:id="@+id/texto_dificultad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/texto_dificultad"
            android:textColor="@color/doradoClaro"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_dificultad"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/spinner"
            android:contentDescription="@string/texto_dificultad_hint"
            android:minHeight="35dp"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/texto_dificultad" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/montserrat_medio"
        android:gravity="center"
        android:text="@string/btn_add_receta"
        android:textColor="@color/negroClaro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>